# tanucc-script-ir-rs

./: Cargo.toml  com.bash  out
src/: lib.rs  main.rs  traits.rs  types.rs
src/decoder/: ir.rs  mod.rs
src/lexer/: tokenizer.rs
src/parser/: syntax.rs
